--- a/css/style.css
+++ b/css/style.css
@@ -128,7 +128,7 @@ body{
     line-height: 23px;
 }
 .slide-summer{
-    background-image: url(/img/summer.png);
+    background-image: url(img/summer.png);
     background-repeat: no-repeat;
     background-size: cover;
 }
