--- a/css/style.css
+++ b/css/style.css
@@ -339,6 +339,7 @@ body{
     color: #B9B9BE;
     max-width: 220px;
     margin-left: 23px;
+    text-align: left;
     margin-bottom: 36px;
 }
 .category-card-info{
@@ -428,11 +429,11 @@ body{
     box-shadow: 0px 4px 40px rgba(0, 0, 0, 0.1);
     border-radius: 18px;
     margin: 15px;
-    margin-bottom: 202px;
 }
 .benefit-card-img{
     width: 60px;
     height: 60px;
+    /*text-align: center;*/
     margin: 30px 105px;
 }
 .benefit-tag{
@@ -453,9 +454,11 @@ body{
     text-align: center;
     color: #49494F;
     max-width: 223px;
+    position: center;
     margin-left: 24px;
 }
 .grey{
+    margin-top: 202px;
     background: #F6F6F6;
     padding: 40px;
 }
@@ -483,4 +486,78 @@ body{
 .social-link{
     margin-left: 20px;
     text-decoration: none;
+}
+.slider-buttons{
+    position: absolute;
+    right: 46px;
+    bottom: 40px;
+    z-index: 9;
+    display: flex;
+    align-items: center;
+    width: 100px;
+    justify-content: space-between;
+}
+.slider-button{
+    cursor: pointer;
+}
+.swiper{
+    position: relative;
+}
+
+@media (max-width: 1260px) {
+    .container{
+        max-width: 950px;
+    }
+    .search-form{
+        margin-left: 40px;
+        margin-right: 40px;
+    }
+    .category-cards{
+        flex-wrap: wrap;
+    }
+    .category-card{
+        flex: 50%;
+        max-width: calc(50% - 30px);
+    }
+    .benefit-cards{
+        flex-wrap: wrap;
+    }
+    .benefit-card{
+        flex: 50%;
+        max-width: calc(50% - 30px);
+    }
+    .benefit-description{
+        margin-left: calc(50% - 120px);
+    }
+    .benefit-tag{
+        margin-left: calc(50% - 90px);
+    }
+    .benefit-card-img{
+        margin-left: calc(50% - 40px);
+    }
+}
+@media (max-width: 992px) {
+    .container{
+        max-width: 750px;
+    }
+    .slide{
+        padding: 50px;
+    }
+    .delivery-card{
+        width: calc(50% - 30px);
+    }
+}
+@media (max-width: 768px){
+    .container{
+        max-width: 560px;
+    }
+    .header{
+        flex-wrap: wrap;
+    }
+    .search-form{
+        order: 5;
+    }
+    .promo{
+        flex-wrap: wrap;
+    }
 }
