--- a/css/style.css
+++ b/css/style.css
@@ -561,3 +561,11 @@ body{
         flex-wrap: wrap;
     }
 }
+@media (max-width: 600px) {
+    .container{
+        max-width: 90%;
+    }
+    .category-card{
+        max-width: 100%;
+    }
+}
